@@ -1,5 +1,6 @@
 0.0.8 (in development)
 ------------------------------------------------------------------------
+- Improved: Mouse can now be dragged to select scenery when saving track designs
 - Fix: [#3178, #5456] Paths with non-ASCII characters not handled properly on macOS.
 - Fix: [#3681] Steel Twister rollercoaster always shows all track designs
 - Fix: Track components added by OpenRCT2 are now usable in older scenarios.
